--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +24,7 @@
     "angularfire2": "^5.4.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.5.2",
+    "express": "^4.17.1",
     "firebase": "^7.19.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
@@ -51,5 +53,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
+  },
+  "engines": {
+    "node": "~8.9.1",
+    "npm":"~6.0.0"
   }
 }
