--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@angular/animations": "~9.1.6",
     "@angular/common": "~9.1.6",
     "@angular/compiler": "~9.1.6",
+    "@angular/compiler-cli": "^9.1.12",
     "@angular/core": "~9.1.6",
     "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.1.6",
+    "@angular/language-service": "^10.1.6",
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
@@ -36,11 +38,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.5",
-    "@angular/cli": "~9.1.5",
-    "@angular/compiler-cli": "~9.1.6",
-    "@types/node": "^12.11.1",
+    "@angular/cli": "^9.1.12",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -56,6 +57,6 @@
   },
   "engines": {
     "node": "~8.9.1",
-    "npm":"~6.0.0"
+    "npm": "~6.0.0"
   }
 }
